# orpheus-cpp

./: README.md  README_OPTIMIZATION.md  benchmark_tts.py  pyproject.toml  requirements_optimized.txt  setup_optimized.sh  test_optimized.py
src/orpheus_cpp/: __init__.py  optimized_model.py
tests/: test.py
